--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1294,7 +1294,7 @@ html[xmlns] .flexslider .slides {
 .flex-caption1 h5,
 .flex-caption1 h6,
 .flex-caption1 p {
-  color: #2c3e50;
+  color: #aaa;
 }
 .flex-caption1 h1.caption-headline,
 .flex-caption1 h2.caption-headline {
@@ -1316,10 +1316,11 @@ html[xmlns] .flexslider .slides {
   margin-bottom: 25px;
 }
 .flex-caption1 p {
-  font-weight: 400;
+  font-weight: 700;
   font-family: "montserrat";
   font-size: 19px;
   margin-bottom: 12px;
+  color: #111;
 }
 .flex-caption1 i {
   color: #c0392b;
@@ -3932,6 +3933,11 @@ ul.pagination li a {
     width: 50% !important;
     margin-left: 50%;
   }
+}
+
+.ew-bold {
+  font-weight: 700;
+  color: #111 !important;
 }
 
 /*** End of EW customization ***/
