--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1747,23 +1747,35 @@ a.button1:hover i {
   line-height: 1.6;
 }
 .main-boxes .one-box1 {
-  width: 33.33%;
+  width: 100%;
   float: left;
-  background: #ecf0f1;
+  background: #c0392b;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .main-boxes .one-box1 h3 {
   font-weight: 700;
+}
+.main-boxes .one-box1 p {
+  font-size: 20px;
+  color: #fff;
+}
+.main-boxes .one-box3 p {
+  font-size: 18px;
+  color: #333;
 }
 .main-boxes .one-box1 .one-box1-inner {
   width: 100%;
   float: left;
   padding: 102px 0;
-  background: #ecf0f1;
+  background: #c0392b;
 }
-.main-boxes .one-box2 {
-  width: 33.33%;
+.main-boxes .one-box3 {
+  width: 50%;
   float: left;
   background: #2c3e50;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .main-boxes .one-box2 .one-box2-inner {
   width: 100%;
@@ -1782,7 +1794,43 @@ a.button1:hover i {
   line-height: 1;
   letter-spacing: 3px;
 }
+.main-boxes .one-box1 h2 {
+  display: inline-block;
+  font-family: "domine";
+  font-size: 36px;
+  font-weight: 700;
+  margin-bottom: 19px;
+  padding-right: 6px;
+  padding-left: 6px;
+  line-height: 1;
+  letter-spacing: 3px;
+  color: #fff;
+}
+.main-boxes .one-box3 h2 {
+  display: inline-block;
+  font-family: "domine";
+  font-size: 36px;
+  font-weight: 700;
+  margin-bottom: 19px;
+  padding-right: 6px;
+  padding-left: 6px;
+  line-height: 1;
+  letter-spacing: 3px;
+}
 .main-boxes .one-box2 i {
+  position: relative;
+  top: -7px;
+  display: inline-block;
+  font-size: 15px;
+}
+.main-boxes .one-box1 i {
+  position: relative;
+  top: -7px;
+  display: inline-block;
+  font-size: 15px;
+  color: #fff;
+}
+.main-boxes .one-box3 i {
   position: relative;
   top: -7px;
   display: inline-block;
@@ -1807,9 +1855,9 @@ a.button1:hover i {
   color: #fff;
 }
 .main-boxes .one-box3 {
-  width: 33.33%;
+  width: 50%;
   float: left;
-  background: #c0392b;
+  background: #ecf0f1;
 }
 .main-boxes .one-box3 h3 {
   font-weight: 700;
@@ -1818,8 +1866,8 @@ a.button1:hover i {
   width: 100%;
   height: 100%;
   float: left;
-  padding: 67px 0;
-  background: #c0392b;
+  padding: 102px 0;
+  background: #ecf0f1;
 }
 .main-boxes .one-box3 h1,
 .main-boxes .one-box3 h2,
@@ -1830,7 +1878,7 @@ a.button1:hover i {
 .main-boxes .one-box3 p,
 .main-boxes .one-box3 a,
 .main-boxes .one-box3 div {
-  color: #fff;
+  color: #353535;
 }
 @media (max-width: 1200px) {
   .main-boxes .one-box2 h2 {
@@ -3928,7 +3976,7 @@ ul.pagination li a {
 
 /*** Customized with Love for Echo White :-) ***/
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
   .ew_slider {
     width: 50% !important;
     margin-left: 50%;
