--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -78,77 +78,7 @@
   </div>
   </header>
 
-  
-<div class="mainheadlinewrapperpage">
-<div class="mainheadlinewrapperpage-inner">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="mainheadlinepage">
-          <h1>About me</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-<!-- breakpoint for menu -->
-<div class="wrapper100percent">
-<div class="menuswitch">
-</div>
-</div>
-<!-- breakpoint for menu end -->
-<div class="divider-space">
-</div>
-<div class="divider-space">
-</div>
-<div class="wrapper100percent">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <img src="images/about.jpg" alt=""/>
-      </div>
-      <div class="col-md-6">
-          <div class="divider-space">
-            </div>
-            <p class="ew-intro">
-            I see and experience many concerns, frustrations and pain about health care, education, housing, drug, homeless, and the situation of First Nation people. But we lack a voice in Ottawa to represent our concerns, as the political parties put their interest above ours. I will passionately and tireless voice your concerns in Parliament as an independent MP.
-            </p>
-        </p>
-        <ul class="ul-list ew-intro">
-          <li>
-            <i class="fab fa-canadian-maple-leaf icon"></i>
-            I am married, with young kids. My core values are shaped by my Christian faith. I am a loving person and welcoming to people from all backgrounds.
-          </li>
-          <li>
-            <i class="fab fa-canadian-maple-leaf icon"></i>
-            I am an MBA Graduate from University of Ottawa, with working experience in the federal government and crown corporation in Ottawa.
-          </li>
-          <li>
-            <i class="fab fa-canadian-maple-leaf icon"></i>
-            As an entrepreneur for more than twenty years, I was a member of the Team Canada Trade Mission to promote billion-dollar project overseas for Canada.
-          </li>
-          <li>
-          <i class="fab fa-canadian-maple-leaf icon"></i>
-          I am a great communicator and negotiator, passionately achieve win-win solutions in conflicting situations.
-          </li>
-          <i class="fab fa-canadian-maple-leaf icon"></i>
-          As a first-generation Asian immigrant, I speaks fluent English, Mandarin, and Cantonese and will be an enthusiastic ambassador of Nanaimo to the world.
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="divider-space">
-</div>
-<div class="divider-space">
-</div>
-<div class="divider-space">
-</div>
-<div class="divider-space">
-</div>
+  {{ content | safe }}
 
    <!-- content is above this -->
   <!-- /footer is below this -->
