--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4013,4 +4013,8 @@ ul.pagination li a {
   color: rgb(44, 62, 80);
 }
 
+.ew-active {
+  color: #c0392b !important;
+}
+
 /*** End of EW customization ***/
