First french version

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -35,6 +35,14 @@ contact page
 pagination
 ------------------------------------------------------------*/
 
+.en, .fr {
+  display:none;
+}
+
+.en:lang(en), .fr:lang(fr) {
+   display:block;
+}
+
 /********* html5 and responsive content *********/
 header,
 nav,
