--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -116,7 +116,7 @@
           <div class="cl-effect-12 fr">
             <ul class="nav navbar-nav pull-right">
               <li><a href="about.html" class="{{aboutActive}}">À propos</a></li>
-              <li><a href="nanaimo.html" class="{{newsActive}}">Nouvelles</a></li>
+              <li><a href="nanaimo.html" class="{{newsActive}}">Nanaimo群英匯</a></li>
               <!-- <li><a href="gallery.html" class="{{galleryActive}}">Galerie</a></li> -->
               <li><a href="#" onclick="onEnglish();">En</a></li>
               <li><a href="#" onclick="onFrench();" class="ew-active">Fr</a></li>
